--- a/web/manifest.json
+++ b/web/manifest.json
@@ -4,7 +4,7 @@
     "start_url": ".",
     "display": "standalone",
     "background_color": "#ffffff",
-    "theme_color": "#ffffff",
+    "theme_color": "#000000",
     "description": "A simple ledger app for sharing expenses",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
