--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   collection: ^1.18.0
   flutter_launcher_icons: ^0.14.2
   universal_html: ^2.2.4
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   flutter_test:
