--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -11,7 +11,8 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.8
-  supabase_flutter: ^2.8.1
+  # supabase_flutter: ^2.8.1
+  pocketbase: ^0.21.0
   go_router: ^14.6.0
   easy_localization: ^3.0.7
   mocktail: ^1.0.4
