--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   flutter_launcher_icons: ^0.14.2
   universal_html: ^2.2.4
   url_launcher: ^6.3.1
+  package_info_plus: ^8.1.3
 
 dev_dependencies:
   flutter_test:
