--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -37,6 +37,7 @@ dev_dependencies:
   build_verify: any
   freezed: ^2.5.7
   json_serializable: ^6.9.0
+  shared_preferences_tools: ^1.1.0
 
 flutter:
   uses-material-design: true
